--- a/city.html
+++ b/city.html
@@ -73,7 +73,7 @@
                             <h3 href="#about" >The city with high security, well developed infrastructure and anti-rug policy. </h3>
                             <div class="animation-container animation-fade-right" data-animation-delay="200">
                            
-                                <a href="main.html" class="smooth-scroll">go further.</a>
+                                <a href="main.html" class="button">go further.</a>
                                 
                             </div>
                         </div>
@@ -85,6 +85,7 @@
 
 
                 </section>
+
                 <!-- /INTRO -->
 
 
