--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
                 <section id="about" class="test1">
 
 
-                    <h3 class="headline scroll-animated">about</h3>
+                    <h3 class="headline scroll-animated">about us</h3>
                     
                     <p class="scroll-animated test2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis magna ac justo tincidunt, nec rhoncus leo rutrum. Duis mattis, neque id consectetur gravida, ligula massa consequat mi, id ultricies massa mauris eu augue. Donec dictum diam vitae dui iaculis, vitae laoreet sem molestie. Suspendisse hendrerit interdum euismod.</p>
 
