--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                         <!-- ANIMATION CONTAINER -->
                         <div class="animation-container animation-fade-right test1" data-animation-delay="200">
                            
-                            <a href="city.html" class="button">city.</a>
-                            <a href="city.html" class="button">white paper.</a>
-                            <a href="city.html" class="button">about.</a>
+                            <a href="city.html" class="button">city</a>
+                            <a href="city.html" class="button">white paper</a>
+                            <a href="city.html" class="button">about</a>
                             
                         </div>
                         <!-- /ANIMATION CONTAINER -->
