--- a/city.html
+++ b/city.html
@@ -73,7 +73,7 @@
                             <h3 href="#about" >Viverra Casa is a city with high security, well developed infrastructure and anti-rug policy. </h3>
                             <div class="animation-container animation-fade-right" data-animation-delay="200">
                            
-                                <a href="infrastructure.html" class="button">infrastructure.</a>
+                                <a href="infrastructure.html" class="button">go further.</a>
                                 
                             </div>
                         </div>
