--- a/infrastructure.html
+++ b/infrastructure.html
@@ -74,7 +74,7 @@
             <section id="about">
 
 
-                    <h3 class="headline scroll-animated">Viverra Casa is not just a project, it is rug police. </h3>
+                    <h3 class="headline scroll-animated">Viverra Casa is not just a city, it is anti-rug empire. </h3>
                     
                    
 
