--- a/infrastructure.html
+++ b/infrastructure.html
@@ -45,9 +45,7 @@
         <!-- CONTAINER MID -->
         <div class="container-mid">
           <!-- ANIMATION CONTAINER -->
-          <div
-            class="animation-container animation-fade-right"
-          >
+          <div>
             <img class="intro1" src="assets/img/ISLAND-transparent-large.gif" />
           </div>
           <!-- /ANIMATION CONTAINER -->
