--- a/infrastructure.html
+++ b/infrastructure.html
@@ -37,7 +37,10 @@
       <div class="background-img"></div>
     </div>
     <!-- /IMAGE CONTAINER -->
-
+    <header class="header">
+        <!-- Logo -->
+        <a href="#" class="logo">Viverra Casa</a>
+    </header>
     <!-- CONTENT AREA -->
     <div class="content-area">
       <!-- INTRO -->
