--- a/infrastructure.html
+++ b/infrastructure.html
@@ -45,7 +45,7 @@
         <div class="container-mid">
           <!-- ANIMATION CONTAINER -->
           <div>
-            <img class="intro1" src="assets/img/IMG_1199 (2).png" />
+            <img class="intro1" src="assets/img/ezgif.com-gif-maker.png" />
           </div>
           <!-- /ANIMATION CONTAINER -->
         </div>
