--- a/infrastructure.html
+++ b/infrastructure.html
@@ -32,6 +32,12 @@
   </head>
 
   <body>
+
+  <div class="preloader">
+           
+      <div class="spinner"></div>
+      
+  </div>
     <!-- /IMAGE CONTAINER -->
     <header class="header">
         <!-- Logo -->
