--- a/infrastructure.html
+++ b/infrastructure.html
@@ -51,7 +51,12 @@
         <div class="container-mid">
           <!-- ANIMATION CONTAINER -->
           <div>
-            <img class="intro1" src="assets/img/ezgif.com-gif-maker.png" />
+            
+            <picture>
+              <source srcset="assets/img/2k.png" media="(min-width: 2000px)" />
+              <source srcset="assets/img/desktop.png" media="(min-width: 600px)" />
+              <img src="assets/img/4k.png" class="intro1"/>
+            </picture>
           </div>
           <!-- /ANIMATION CONTAINER -->
         </div>
