--- a/infrastructure.html
+++ b/infrastructure.html
@@ -53,9 +53,9 @@
           <div>
             
             <picture>
-              <source srcset="assets/img/2k.png" media="(min-width: 2000px)" />
-              <source srcset="assets/img/desktop.png" media="(min-width: 600px)" />
-              <img src="assets/img/4k.png" class="intro1"/>
+              <source srcset="assets/img/2k.gif" media="(max-width: 2000px)" />
+              <source srcset="assets/img/desktop.png" media="(max-width: 600px)" />
+              <img src="assets/img/4k.gif" class="intro1"/>
             </picture>
           </div>
           <!-- /ANIMATION CONTAINER -->
