--- a/infrastructure.html
+++ b/infrastructure.html
@@ -86,7 +86,7 @@
             <div class="tedd1">
               <img
                 class="scroll-animated"
-                src="assets/img/ship-in-a-bottle.gif"
+                src="assets/img/IMG_1232.png"
               />
             </div>
 
