--- a/infrastructure.html
+++ b/infrastructure.html
@@ -85,8 +85,8 @@
             <h3 class="headline scroll-animated tedd4">Police</h3>
             <div class="tedd1">
               <img
-                class="scroll-animated"
-                src="assets/img/IMG_1232.png"
+                class="scroll-animated img5"
+                src="assets/img/IMG_1233.png"
               />
             </div>
 
