--- a/infrastructure.html
+++ b/infrastructure.html
@@ -41,7 +41,7 @@
     <!-- /IMAGE CONTAINER -->
     <header class="header">
         <!-- Logo -->
-        <a href="#" class="logo">Viverra Casa</a>
+        <a href="index.html" class="logo">Viverra Casa</a>
     </header>
     <!-- CONTENT AREA -->
     <div class="content-area">
