--- a/infrastructure.html
+++ b/infrastructure.html
@@ -164,6 +164,27 @@
             <div class="left2"></div>
           </section>
         </div>
+        <div>
+          <section id="about">
+            <h3 class="headline scroll-animated tedd4">Business Center</h3>
+            <div class="tedd1">
+              <img
+                class="scroll-animated img5"
+                src="assets/img/IMG_1250.png"
+              />
+            </div>
+
+            <div>
+              <p class="scroll-animated test2">
+                In our city there are lots of different services which are part
+                of the whole infrastructure. Each service is responsible for its
+                own task. Talking in easy language services are future
+                facilities of Viverra Casa.
+              </p>
+            </div>
+            <div class="left2"></div>
+          </section>
+        </div>
         <!-- ABOUT -->
       </div>
     </div>
