--- a/infrastructure.html
+++ b/infrastructure.html
@@ -166,7 +166,7 @@
         </div>
         <div>
           <section id="about">
-            <h3 class="headline scroll-animated tedd4">Business Center</h3>
+            <h3 class="headline scroll-animated tedd4">Business Centre</h3>
             <div class="tedd1">
               <img
                 class="scroll-animated img5"
