--- a/infrastructure.html
+++ b/infrastructure.html
@@ -149,7 +149,7 @@
             <div class="tedd1">
               <img
                 class="scroll-animated img5"
-                src="assets/img/IMG_1243.png"
+                src="assets/img/fire.png"
               />
             </div>
 
