--- a/infrastructure.html
+++ b/infrastructure.html
@@ -41,7 +41,7 @@
     <!-- /IMAGE CONTAINER -->
     <header class="header">
         <!-- Logo -->
-        <a href="index.html" class="logo">Viverra Casa</a>
+        <a href="index.html" class="logo">Viverra Casa.</a>
     </header>
     <!-- CONTENT AREA -->
     <div class="content-area">
@@ -73,10 +73,7 @@
           <h3 class="headline scroll-animated">What do services below mean?</h3>
 
           <p class="scroll-animated test2">
-            In our city there are lots of different services which are part of
-            the whole infrastructure. Each service is responsible for its own
-            task. Talking in easy language services are future facilities of
-            Viverra Casa.
+            In any metropolis there should be security agencies, emergency assistance and medicine, all of which are aimed at making people's lives safer and easier ... Our city is no exception! The main infrastructure buildings are presented below, but the city is expanding and new city buildings appear along with it...
           </p>
         </section>
 
@@ -92,10 +89,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                In our city there are lots of different services which are part
-                of the whole infrastructure. Each service is responsible for its
-                own task. Talking in easy language services are future
-                facilities of Viverra Casa.
+                The police is the first and very important security body. Its main function is to find suspicious projects, as well as to check them. Our team will actively monitor twitter and discord for scammers. Also, our team will contact the projects founders and check them, asking for additional information, and then give a preliminary assessment. Also, members of our team will immediately notify you of any suspicious activity and red flags.
               </p>
             </div>
             <div class="left2"></div>
@@ -113,10 +107,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                In our city there are lots of different services which are part
-                of the whole infrastructure. Each service is responsible for its
-                own task. Talking in easy language services are future
-                facilities of Viverra Casa.
+                One of the most important infrastructures in the city will be a hospital. Our team will help people affected by the scam. Together with us you have a chance to return the lost funds or part of them. Also, in the hospital, small initial capital will be paid to people who have suffered from the scam.
               </p>
             </div>
             <div class="left2"></div>
@@ -134,10 +125,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                In our city there are lots of different services which are part
-                of the whole infrastructure. Each service is responsible for its
-                own task. Talking in easy language services are future
-                facilities of Viverra Casa.
+                School is an important department in the development of every person. Live and learn. Our team will conduct interesting training courses. We will also provide you with many convenient guides and sources of information to fully understand all areas of cryptocurrency and NFT
               </p>
             </div>
             <div class="left2"></div>
@@ -176,10 +164,9 @@
 
             <div>
               <p class="scroll-animated test2">
-                In our city there are lots of different services which are part
-                of the whole infrastructure. Each service is responsible for its
-                own task. Talking in easy language services are future
-                facilities of Viverra Casa.
+                Businesscentre is our own and very strong DAO, which will include many tools to help its participants earn.
+                Various monitors, custom tools. Our team will take care of the high-quality selection of employees who will make calls to solana, ether and futures.
+The main goal of this department is to make a cohesive team and help people increase their capital.
               </p>
             </div>
             <div class="left2"></div>
