--- a/infrastructure.html
+++ b/infrastructure.html
@@ -73,7 +73,7 @@
           <h3 class="headline scroll-animated">What do services below mean?</h3>
 
           <p class="scroll-animated test2">
-            In any metropolis there should be security agencies, emergency assistance and medicine, all of which are aimed at making people's lives safer and easier ... Our city is no exception! The main infrastructure buildings are presented below, but the city is expanding and new city buildings appear along with it...
+            Services which are shown below mean our future facilities.
           </p>
         </section>
 
@@ -89,7 +89,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                The police is the first and very important security body. Its main function is to find suspicious projects, as well as to check them. Our team will actively monitor twitter and discord for scammers. Also, our team will contact the projects founders and check them, asking for additional information, and then give a preliminary assessment. Also, members of our team will immediately notify you of any suspicious activity and red flags.
+                Police includes searches for suspicious projects, next-level doxx and real-time projects monitoring.
               </p>
             </div>
             <div class="left2"></div>
@@ -107,7 +107,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                One of the most important infrastructures in the city will be a hospital. Our team will help people affected by the scam. Together with us you have a chance to return the lost funds or part of them. Also, in the hospital, small initial capital will be paid to people who have suffered from the scam.
+                Assistance to people who were scammed. This includes full or partial refund of lost funds to some people.
               </p>
             </div>
             <div class="left2"></div>
@@ -125,7 +125,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                School is an important department in the development of every person. Live and learn. Our team will conduct interesting training courses. We will also provide you with many convenient guides and sources of information to fully understand all areas of cryptocurrency and NFT
+                It is special departament for newcomers in nft community which aims at self-development. It will be responsible for presenting help and usefull guides for better understanding for all people.
               </p>
             </div>
             <div class="left2"></div>
@@ -143,10 +143,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                In our city there are lots of different services which are part
-                of the whole infrastructure. Each service is responsible for its
-                own task. Talking in easy language services are future
-                facilities of Viverra Casa.
+                This service is similar to Hospital. It can be also called <b>Insurance</b>. In case of total fail we will give fixed amount of money in crypto for self-recovery to some of our supporters. 
               </p>
             </div>
             <div class="left2"></div>
@@ -164,9 +161,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                Businesscentre is our own and very strong DAO, which will include many tools to help its participants earn.
-                Various monitors, custom tools. Our team will take care of the high-quality selection of employees who will make calls to solana, ether and futures.
-The main goal of this department is to make a cohesive team and help people increase their capital.
+                This building will present dao with different usefull tools and and profitable calls. The main goal is to present opportunity for increasing capital of our supporters. Calls will be give only by professionals.
               </p>
             </div>
             <div class="left2"></div>
