--- a/infrastructure.html
+++ b/infrastructure.html
@@ -89,7 +89,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                Police includes searches for suspicious projects, next-level doxx and real-time projects monitoring.
+                Police includes detection of suspicious projects, next-level doxx and real-time projects monitoring.
               </p>
             </div>
             <div class="left2"></div>
