--- a/infrastructure.html
+++ b/infrastructure.html
@@ -55,7 +55,7 @@
             <picture>
               <source srcset="assets/img/2k.gif" media="(max-width: 2000px)" />
               <source srcset="assets/img/desktop.png" media="(max-width: 600px)" />
-              <img src="assets/img/4k.gif" class="intro1"/>
+              <img src="assets/img/4k.gif" class="intro1" class="ddg">
             </picture>
           </div>
           <!-- /ANIMATION CONTAINER -->
