--- a/infrastructure.html
+++ b/infrastructure.html
@@ -130,7 +130,7 @@
 
             <div>
               <p class="scroll-animated test2">
-                This building will present dao with different usefull tools and and profitable calls. The main goal is to present opportunity for increasing capital of our supporters. Calls will be give only by professionals.
+                This building will present dao with different usefull tools and and profitable calls. The main goal is to present opportunities for increasing capital of our supporters. Calls will be give only by professionals.
               </p>
             </div>
             <div class="left2"></div>
